@@ -3,112 +3,90 @@ package ru.practicum.shareit.item;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.shareit.booking.BookingRepository;
+import ru.practicum.shareit.comment.Comment;
+import ru.practicum.shareit.comment.CommentMapper;
+import ru.practicum.shareit.comment.CommentRepository;
+import ru.practicum.shareit.comment.dto.CommentDto;
 import ru.practicum.shareit.exception.NotFoundException;
+import ru.practicum.shareit.exception.ValidationException;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.request.ItemRequest;
-import ru.practicum.shareit.request.ItemRequestMapper;
-import ru.practicum.shareit.request.ItemRequestService;
-import ru.practicum.shareit.request.dto.ItemRequestDto;
-import ru.practicum.shareit.user.UserMapper;
+import ru.practicum.shareit.request.ItemRequestRepository;
 import ru.practicum.shareit.user.UserService;
 import ru.practicum.shareit.user.model.User;
 
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class ItemServiceImpl implements ItemService {
-    private final Map<Long, Item> items = new HashMap<>();
-    private Long idCounter = 1L;
+    private final ItemRepository itemRepository;
     private final UserService userService;
-    private final ItemRequestService itemRequestService;
+    private final ItemRequestRepository itemRequestRepository;
+    private final BookingRepository bookingRepository;
+    private final CommentRepository commentRepository;
+    private final ItemMapper itemMapper;
 
     @Override
+    @Transactional
     public ItemDto addItem(ItemDto itemDto, Long ownerId) {
         log.info("Adding new item '{}' for owner ID: {}", itemDto.getName(), ownerId);
 
-        User owner = UserMapper.toUser(userService.getUserById(ownerId));
+        User owner = userService.getUserEntityById(ownerId);
         ItemRequest request = null;
 
         if (itemDto.getRequestId() != null) {
             log.debug("Item has request ID: {}", itemDto.getRequestId());
-            ItemRequestDto requestDto = itemRequestService.getRequestById(itemDto.getRequestId());
-            User requestor = UserMapper.toUser(userService.getUserById(requestDto.getRequestorId()));
-            request = ItemRequestMapper.toItemRequest(requestDto, requestor);
+            request = itemRequestRepository.findById(itemDto.getRequestId())
+                    .orElseThrow(() -> new NotFoundException("Request not found"));
         }
 
-        Item item = ItemMapper.toItem(itemDto, owner, request);
-        item.setId(idCounter);
-        items.put(item.getId(), item);
-        idCounter++;
+        Item item = itemMapper.toItem(itemDto, owner, request);
+        Item savedItem = itemRepository.save(item);
 
         log.debug("Added item: ID={}, Name={}, Owner={}, Request={}",
-                item.getId(), item.getName(), ownerId, itemDto.getRequestId());
+                savedItem.getId(), savedItem.getName(), ownerId, itemDto.getRequestId());
 
-        return ItemMapper.toItemDto(item);
+        return itemMapper.toItemDto(savedItem, ownerId);
     }
 
     @Override
+    @Transactional
     public ItemDto updateItem(Long itemId, ItemDto itemDto, Long ownerId) {
         log.info("Updating item ID: {} for owner ID: {}", itemId, ownerId);
 
-        Item existingItem = items.get(itemId);
-        if (existingItem == null) {
-            log.warn("Item not found for update: ID={}", itemId);
-            throw new NotFoundException("Item not found with id: " + itemId);
-        }
+        Item existingItem = getItemEntityById(itemId);
+        validateOwner(existingItem, ownerId);
 
-        if (!existingItem.getOwner().getId().equals(ownerId)) {
-            log.warn("User {} is not owner of item {}", ownerId, itemId);
-            throw new NotFoundException("User is not the owner of the item");
-        }
+        updateItemFields(existingItem, itemDto);
+        Item updatedItem = itemRepository.save(existingItem);
 
-        String originalName = existingItem.getName();
-        String originalDesc = existingItem.getDescription();
-        Boolean originalAvailable = existingItem.getAvailable();
-
-        if (itemDto.getName() != null) existingItem.setName(itemDto.getName());
-        if (itemDto.getDescription() != null) existingItem.setDescription(itemDto.getDescription());
-        if (itemDto.getAvailable() != null) existingItem.setAvailable(itemDto.getAvailable());
-
-        log.debug("Updated item: ID={}, Name: {} -> {}, Description: {} -> {}, Available: {} -> {}",
-                itemId, originalName, existingItem.getName(),
-                originalDesc != null ? originalDesc.substring(0, Math.min(20, originalDesc.length())) + "..." : "null",
-                existingItem.getDescription() != null ? existingItem.getDescription().substring(0, Math.min(20, existingItem.getDescription().length())) + "..." : "null",
-                originalAvailable, existingItem.getAvailable());
-
-        return ItemMapper.toItemDto(existingItem);
+        log.debug("Updated item: ID={}", itemId);
+        return itemMapper.toItemDto(updatedItem, ownerId);
     }
 
     @Override
-    public ItemDto getItemById(Long itemId) {
-        log.debug("Fetching item by ID: {}", itemId);
-
-        Item item = items.get(itemId);
-        if (item == null) {
-            log.warn("Item not found: ID={}", itemId);
-            throw new NotFoundException("Item not found with id: " + itemId);
-        }
-
-        return ItemMapper.toItemDto(item);
+    public ItemDto getItemById(Long itemId, Long userId) {
+        log.debug("Fetching item by ID: {} for user ID: {}", itemId, userId);
+        Item item = getItemEntityById(itemId);
+        return itemMapper.toItemDto(item, userId);
     }
 
     @Override
     public List<ItemDto> getAllItemsByOwner(Long ownerId) {
         log.debug("Fetching all items for owner ID: {}", ownerId);
 
-        List<ItemDto> result = items.values().stream()
-                .filter(item -> item.getOwner().getId().equals(ownerId))
-                .map(ItemMapper::toItemDto)
-                .toList();
-
-        log.debug("Found {} items for owner ID: {}", result.size(), ownerId);
-        return result;
+        List<Item> items = itemRepository.findByOwnerIdOrderById(ownerId);
+        return items.stream()
+                .map(item -> itemMapper.toItemDto(item, ownerId)) // ownerId для показа бронирований
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -116,34 +94,59 @@ public class ItemServiceImpl implements ItemService {
         log.debug("Searching items by text: '{}'", text);
 
         if (text.isBlank()) {
-            log.debug("Empty search text - returning empty list");
             return Collections.emptyList();
         }
 
-        String searchText = text.toLowerCase();
-        List<ItemDto> result = items.values().stream()
-                .filter(item -> Boolean.TRUE.equals(item.getAvailable()))
-                .filter(item ->
-                        (item.getName() != null && item.getName().toLowerCase().contains(searchText)) ||
-                                (item.getDescription() != null && item.getDescription().toLowerCase().contains(searchText))
-                )
-                .map(ItemMapper::toItemDto)
-                .toList();
-
-        log.debug("Found {} items for search: '{}'", result.size(), text);
-        return result;
+        return itemRepository.searchAvailableItems(text.toLowerCase()).stream()
+                .map(item -> itemMapper.toItemDto(item, null)) // null userId - не показываем бронирования
+                .collect(Collectors.toList());
     }
 
     @Override
     public Item getItemEntityById(Long itemId) {
-        log.debug("Fetching item entity by ID: {}", itemId);
+        return itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Item not found with id: " + itemId));
+    }
 
-        Item item = items.get(itemId);
-        if (item == null) {
-            log.warn("Item entity not found: ID={}", itemId);
-            throw new NotFoundException("Item not found with id: " + itemId);
+    @Override
+    @Transactional
+    public CommentDto addComment(Long itemId, Long userId, CommentDto commentDto) {
+        validateCommentText(commentDto);
+
+        User author = userService.getUserEntityById(userId);
+        Item item = getItemEntityById(itemId);
+        validateBookingForComment(itemId, userId);
+
+        Comment comment = CommentMapper.toComment(commentDto, item, author);
+        Comment savedComment = commentRepository.save(comment);
+
+        log.debug("Added comment: ID={}, Item={}, Author={}",
+                savedComment.getId(), itemId, userId);
+
+        return CommentMapper.toCommentDto(savedComment);
+    }
+
+    private void validateOwner(Item item, Long ownerId) {
+        if (!item.getOwner().getId().equals(ownerId)) {
+            throw new NotFoundException("User is not the owner of the item");
         }
+    }
 
-        return item;
+    private void updateItemFields(Item item, ItemDto itemDto) {
+        if (itemDto.getName() != null) item.setName(itemDto.getName());
+        if (itemDto.getDescription() != null) item.setDescription(itemDto.getDescription());
+        if (itemDto.getAvailable() != null) item.setAvailable(itemDto.getAvailable());
+    }
+
+    private void validateCommentText(CommentDto commentDto) {
+        if (commentDto.getText() == null || commentDto.getText().isBlank()) {
+            throw new ValidationException("Comment text cannot be empty");
+        }
+    }
+
+    private void validateBookingForComment(Long itemId, Long userId) {
+        if (bookingRepository.findCompletedBookingsForComment(itemId, userId).isEmpty()) {
+            throw new ValidationException("User has not booked this item or booking is not completed yet");
+        }
     }
 }
